schema/testdata/errors/relationships_one_to_many_no_relation_attributes.keel
model Author {
    fields {
        written Post
        //expect-error:9:18:RelationshipError:Cannot associate with repeated field 'author' on Post to form a one to many relationship because it is already associated with field 'written'
        coWritten Post
    }
}

model Post {
    fields {
        author Author[]
    }
}
